# WWTraS-parser-tm

./: README.md  main.py  pyproject.toml
configs/: database.py  environment.py
migrations/: env.py
models/: Item.py  base.py
src/: alembic.ini
src/configs/: database.py  environment.py
src/migrations/versions/: ebd8128d8d10_db_creation.py
src/models/: models.py
src/tasks/: data.json  parser.py
