[tool.poetry]
name = "wwtras-parser-tm"
version = "0.1.0"
description = ""
authors = ["aleshkin907 <aleshkin.907@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
